--- a/public/css/viewArtistContent.css
+++ b/public/css/viewArtistContent.css
@@ -3,6 +3,7 @@ html, body {
     height: auto;
     width: 100%;
     background-color: #333;
+    font-family: 'Montserrat', sans-serif;
 }
 /* View Artist Content Styling */
 .profilePhoto {
@@ -13,10 +14,7 @@ html, body {
     border: 1px solid black;
     border-radius: 3px;
 }
-/*a:not([href]):not([tabindex]) {
-    color: inherit;
-    text-decoration: none;
-}*/
+
 .edit {
     float: right;
     color: white !important;
