--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,35 @@
-
-
-
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+<div class="site-wrapper">
+    <div class="site-wrapper-inner">
+        <div class="cover-container">
+            <header class="masthead clearfix">
+                <div class="inner">
+                    <h3 class="masthead-brand">Global Beacon</h3>
+                    <nav class="nav nav-masthead">
+                        <a class="nav-link active" href="/login">Login</a>
+                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Contact Us</a>
+                    </nav>
+                </div>
+            </header>
+            <main role="main" class="inner cover">
+                <h1 class="cover-heading">Login Form</h1> {{!-- {{#if uidObj}} Signed in as {{uidObj}} --}}
+                <a href="/logout">Log Out</a>
+                <form class="form my-2" id="login" action="/login" method="post">
+                    <div class="form-group">
+                        <label for="email-input">Email</label>
+                        <input type="email" class="form-control" id="email-input" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password-input">Password</label>
+                        <input type="password" class="form-control" id="password-input" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-lg btn-success">Login</button>
+                </form>
+                <br /> {{!-- {{else}} --}}
+                <p><a class='btn btn-secondary' href='/signup'>Or Sign Up</a></p>
+                {{!-- {{/if}} --}}
+                </p>
+            </main>
+        </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
-
-{{!--       {{#if uidObj}}
-        Signed in as {{uidObj}} --}} <a href="/logout">Log Out</a>
-
-      <form class="form" id="login" action="/login" method="post">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
-        </form>
-        <br />
-
-{{!--       {{else}} --}}
-        <p> Or Sign Up <a href='/signup'>here</a></p>
-{{!--       {{/if}}
- --}}
-      </div>
-    </div>
-  </div>
-  <script type="text/javascript" src="javascript/login.js"></script>
-
-
+</div>
